--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 <body>
     <div class="activity-frame">
         <h2>Spin the Circle - Dare Challenge</h2>
-        <input type="text" id="contestants" class="player-input" placeholder="Enter player names this way phill, you, him, her">
+        <input type="text" id="contestants" class="player-input" placeholder="Enter player names this way phill, you, him, her,">
         <button class="action-btn" onclick="setContestants()">Set Contestants</button>
         <div class="circle-container">
             <div class="circle" id="spin-circle">
