--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 </head>
 <body>
     <div class="activity-frame">
-        <h2>😁 TOD 😁</h2>
+        <h2>😁 TRUTH or DARE 😁</h2>
         <input type="text" id="contestants" class="player-input" placeholder="Enter player names this way phill, you, him, her,">
         <button class="action-btn" onclick="setContestants()">Set Contestants</button>
         <div class="circle-container">
