--- a/index.html
+++ b/index.html
@@ -1055,7 +1055,7 @@
                 "Take a dance class together 💃",
                 "Try a couples’ yoga class 🧘‍♀️",
                 "Have a DIY cocktail night 🍹",
-                "Watch a romantic movie under the stars 🌟"
+                "Watch a romantic movie under the stars 🌟",
                 "Make homemade pizza together 🍕",
 
 
