--- a/index.html
+++ b/index.html
@@ -333,16 +333,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flirty Fun Zone</title>
   <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #ffccd5, #ffe6cc);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-    }
     .fun-arena {
       background: #fff;
       padding: 2rem;
@@ -398,7 +388,7 @@
         <option value="deep">Deep French</option>
         <option value="random">Random Smooch</option>
       </select>
-      <button class="action-btn" onclick="revealSmooch()">Go!</button>
+      <button class="action-btn" onclick="revealSmooch()"> Go </button>
     </div>
 
     <div id="challenge-pick" style="display: none;">
