--- a/index.html
+++ b/index.html
@@ -333,6 +333,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flirty Fun Zone</title>
   <style>
+      .fun-arena {
+  background: #fff;
+  padding: 2rem;
+  border-radius: 25px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+  text-align: center;
+  max-width: 420px;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
     .fun-arena {
       background: #fff;
       padding: 2rem;
