--- a/index.html
+++ b/index.html
@@ -333,7 +333,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flirty Fun Zone</title>
   <style>
-      .fun-arena {
+  * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f0f0f0; /* Optional, just to make it look better */
+}
+
+.fun-arena {
   background: #fff;
   padding: 2rem;
   border-radius: 25px;
@@ -341,10 +355,6 @@
   text-align: center;
   max-width: 420px;
   width: 100%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
     .fun-arena {
